5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1585_825.log
== TEST (2019-03-22 18:54:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
area = (from math import pi) * raio ** 2 
-- ERROR:
File "XXXX", line 6
    area = (from math import pi) * raio ** 2 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:57:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
area = from math import pi * raio ** 2 
volume = 
-- ERROR:
File "XXXX", line 6
    area = from math import pi * raio ** 2 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:58:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
area = from (math) import pi * raio ** 2 
volume = 
-- ERROR:
File "XXXX", line 6
    area = from (math) import pi * raio ** 2 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:58:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
area = from (math) import * raio ** 2 
volume = 
-- ERROR:
File "XXXX", line 6
    area = from (math) import * raio ** 2 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:00:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
b = from (math) import pi
area = b * (raio ** 2)
volume = (4 * b * r ** 3) / 3

-- ERROR:
File "XXXX", line 6
    b = from (math) import pi
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:00:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
b = from math import pi
area = b * (raio ** 2)
volume = (4 * b * r ** 3) / 3

-- ERROR:
File "XXXX", line 6
    b = from math import pi
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:01:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = b * (raio ** 2)
volume = (4 * b * r ** 3) / 3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = b * (raio ** 2)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:02:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = b * (raio ** 2)
volume = (4 * b * r ** 3) / 3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = b * (raio ** 2)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:03:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = pi * (raio ** 2)
volume = (4 * pi * r ** 3) / 3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    volume = (4 * pi * r ** 3) / 3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:03:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = pi * (raio ** 2)
volume = (4 * pi * raio ** 3) / 3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    volume = (4 * pi * r ** 3) / 3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:03:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = pi * (raio ** 2)
volume = (4 * pi * raio ** 3) / 3
print(area)
print(volume)
-- OUTPUT:
63.61725123519331
381.7035074111598
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:04:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = pi * (raio ** 2)
volume = (4 * pi * raio ** 3) / 3
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:05:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input(" Digite o raio do circulo: "))
from math import pi
area = pi * (raio ** 2)
volume = (4 * pi * raio ** 3) / 3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.113944
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:06:52) 
-- CODE:
raio = float(input(" Digite o valor do raio: "))
from math import pi

area = pi * raio ** 2

print(area)
-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:08:16) 
-- CODE:
raio = float(input(" Digite o valor do raio: "))
from math import pi

area = pi * raio ** 2
volume = (4 * pi * raio ** 3) / 3
print(area)
print(volume)
-- OUTPUT:
63.61725123519331
381.7035074111598
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:09:01) 
-- CODE:
raio = float(input(" Digite o valor do raio: "))
from math import pi

area = pi * raio ** 2
volume = (4 * pi * raio ** 3) / 3
print(round(area,3))
print(round(volume,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:09:09) 
-- CODE:
raio = float(input(" Digite o valor do raio: "))
from math import pi

area = pi * raio ** 2
volume = (4 * pi * raio ** 3) / 3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.158103
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
